# cvsdk

./: .gitignore  pyproject.toml  taskfile.yml
cvsdk/: __init__.py  cli.py
cvsdk/convert/: cli.py
cvsdk/dino/: data.py  dino_module.py  train.py
cvsdk/eval/: cli.py
cvsdk/eval/classification/: __init__.py  _probability.py  confusion_matrix.py  f1_confidence.py  precision_confidence.py  precision_recall.py  probability_kde.py  recall_confidence.py  reliability_diagram.py  roc_curve.py  topk_accuracy.py
cvsdk/eval/detection/: confusion_matrix.py  f1_confidence.py  precision_confidence.py  precision_recall.py  recall_confidence.py
cvsdk/fiftyone/: cli.py
cvsdk/mm/det/: board.py  cli.py  config.py  detect.py  utils.py
cvsdk/mm/det/assigners/: __init__.py  max_iom_assigner.py
cvsdk/mm/det/backbones/: __init__.py  dinov3.py  dinov3_convnext.py  lightlydinov2.py  sam.py  test.py  vil.py
cvsdk/mm/det/datasets/: __init__.py  yolo.py
cvsdk/mm/det/necks/: __init__.py  attnfpn.py  identity_mapper.py  multiscale_projector.py  sfp.py
cvsdk/mm/det/vitdet/vitdet/: vit.py
cvsdk/mm/pretrain/: __init__.py  cli.py  utils.py
cvsdk/mm/segmentation/: board.py  cli.py  config.py  detect.py  eval.py  utils.py
cvsdk/mmdet/: cli.py
cvsdk/mmpretrain/: board.py  cli.py  config.py  detect.py  eval.py  utils.py
cvsdk/mmsegmentation/: cli.py  utils.py
cvsdk/model/: __init__.py  dataset_accessor.py
cvsdk/model/eval/: boxes.py
cvsdk/model/loaders/: coco.py  dataframe.py  df.py  yolo.py
cvsdk/rf/: cli.py  det.py  seg.py
cvsdk/yolo/: clean.py  cli.py  dataset_weighted.py  inspect.py  transformations.py
docs/: 01-setup.md  mmdetection.md
docs/FiftyOne/: CLI.md
docs/MMPretrain/: MMPretrain.md
docs/MMSegmentation/: MMSegmentation.md
docs/YOLO/: CLI.md
tests/: test_yolo_inspect.py
